# BusinessInfinity

./: .funcignore  .gitignore  .gitignore.bak  .gitmodules  AOS_IMPLEMENTATION_STATUS.md  AOS_REFACTORING_SPEC.md  AOS_UTILIZATION_ANALYSIS.md  ARCHITECTURE.md  CONSOLIDATION_README.md  COVENANT_EXPANSION_SUMMARY.md  HttpMain.py  IMPLEMENTATION_SUMMARY_AOS_MIGRATION.md  MCP_CLIENT_MIGRATION.md  MIGRATION_GUIDE.md  MVP_DELIVERY_SUMMARY.md  MVP_README.md  README.md  REFACTORING_ARCHITECTURE.md  REFACTORING_COMPLETION.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  asgi_app.py  autonomous_boardroom.py  azure.yaml  business_agents.py  business_agents_refactored.py  business_infinity.py  business_infinity_core.py  business_infinity_refactored.py  business_workflows.py  c-suite.mmd  composite.mmd  core.py  demo_adapter_system.py  demo_audit_trail.py  demo_mentor_mode.py  demo_multi_dimensional_learning.py  features.md  function_app.py  (+31 more)
.archive/: AOS_INTEGRATION_SUMMARY.md  AOS_REFACTORING_SPEC.md  DecisionLedgerExplorer.py  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README_RUNTIME_REFACTORING.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETED.md  REFACTORING_DELIVERABLES_README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REVIEW_GUIDE.md  RUNTIME_REFACTORING_SUMMARY.md  TASK_COMPLETE.md  VALIDATION_TESTING.md  business_infinity_config.py  business_infinity_refactored.py  core_config.py  example_boardroom_orchestrator.py  function_app_runtime.py  investor_agent.py  manager.py  mvp_agents.py  routes_agents.py  routes_audit.py  routes_business_service_bus.py  routes_decisions.py  routes_health.py  routes_mentor.py  routes_onboarding.py  routes_workflows.py
Azure/: AzureFunctions.py  linkedin-auth.py  linkedin-callback.py
Buddhi/: manifest.json
CFO/: manifest.json
CHRO/: manifest.json
COO/: manifest.json
CSO/: manifest.json
CTO/: manifest.json
Company/: ReadMe.md
LeadershipAgent/: manifest.json
Manas/: manifest.json
Poet/: manifest.json
PurposeDrivenAgent/: manifest.json
Seeker/: manifest.json
SelfLearningAgent/: manifest.json
adapters/: Readme.md  Self-Learning.md  __init__.py  adapter_configs.json  adapter_orchestrator.py  multi_dimensional_learning.py  self_learning_system.py
agents/: ChiefExecutiveOfficer.py  ChiefFinancialOfficer.py  ChiefHumanResourcesOfficer.py  ChiefMarketingOfficer.py  ChiefOperatingOfficer.py  ChiefTechnologyOfficer.py  FounderAgent.py  InvestorAgent.py  __init__.py  aml_chat_service.py  manager.py
animation/: references.md  script.md  storyboard.md
api/: AgentManager.py  BlobManager.py  ConversationManager.py  CosmosManager.py  EmailTrigger.json  EnvManager.py  HttpMain.py  MLClientManager.py  Router.py  TrainingDataManager.py  __init__.py  extract_name.py  orchestrator.py  router.py
app/: agents.py  aml.py  call_endpoint.py  governance.py  requirements.txt  storage.py
audit_logs/: audit_log_2025-09-23.jsonl  audit_log_2025-09-24.jsonl  audit_log_2025-10-03.jsonl
authentication/: __init__.py
azure_functions/: agent_events_trigger.py  agent_requests_trigger.py
business_infinity/: __init__.py  function_app.py
businessinfinity.asisaga.com/: chatroom.html  conversation_api.py  index.html  server.py
client/: index.html  main.js
config/: agent_directives.json  apiContracts.json  aurelion-asisaga-com.json  businessInfinity.json  csuite.json  domaincontextconfig.json  genesis-asisaga-com.json  globalDependencies.json  linkedin-mcp-server.json  lora_adapters.json  lora_training_params.json  mcp-asisaga-com.json  mcp-reddit.json  mcp.json  mcp_access_control.json  mentormodeconfig.json  meta.json  persistence_schema.yaml  realmofagents-asisaga-com.json  saga-asisaga-com.json  scheduler_config.json  sharedConfig.json  testSuites.json  theme-asisaga-com.json  website.json  workspace.json  www-asisaga-com.json
conversations/: __init__.py  boardroom_conversations.py  conversation_system.py  dashboard.html
core/: BusinessInfinityOrchestrator.py  README.md  __init__.py  agents.py  audit_trail.py  auth.py  azure_functions.py  businessinfinity_config_mcp_stub.py  environment.py  mcp.py  mcp_access_control.py  mentor_mode.py  ml.py  orchestrator.py  server.py  storage.py  triggers.py  utils.py
dashboard/: manifest.json  mcp_access_control.html  mcp_handlers.py  mentor_mode.html  prompts.py  pyproject.toml  requirements.txt  state.py
docs/: AOS_ENHANCEMENT_REQUESTS.md  AOS_FURTHER_ENHANCEMENTS.md  AOS_INTEGRATION_GUIDE.md  AOS_NEXT_ENHANCEMENTS.md  ARCHITECTURE.md  AUDIT_TRAIL.md  AUTONOMOUS_BOARDROOM_README.md  AZURE_SERVICE_BUS.md  C-Suite.md  CONFIG_CHANGELOG.md  CONSOLIDATION_README.md  FEATURES.md  GENESIS_ANALYSIS_SUMMARY.md  GENESIS_FEASIBILITY_REPORT.md  GENESIS_INTEGRATION_SUMMARY.md  GENESIS_README.md  GENESIS_SUBSTRATE_INDEPENDENCE_ANALYSIS.md  Implementation.md  KNOWLEDGE_BASE.md  MCP_ACCESS_CONTROL.md  ORCHESTRATION_BOUNDARIES.md  README_OLD.md  REFACTORING_ARCHITECTURE.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_SUMMARY.md  RISK_MANAGEMENT.md  TRUST_COMPLIANCE_API.md  V2_MIGRATION_SUMMARY.md  VOTING_SYSTEM_README.md  answers.md  apiContracts.md  architecture.mmd  composite.mmd  development.md  documentation.md  enhanced.mmd  fileGlobs.md  flowchart.mmd  globalDependencies.md  (+18 more)
environment/: __init__.py
examples/: complete_app_example.py
features/: __init__.py
framework/: .env.example  adapters.schema.json  layout.md
host/: requirements.txt
install/: install_package.py  precheck_package.py  resolve_install_order.py  run_all_installs.py  summarize_results.py
lora-pipeline/: LoRAPipeline.py  MLManager.py  run_lora_pipeline.py  train_lora.py
mentor/: README_EXTENSION.md  Readme.md  Specifications.md  build.sh  package.json  structure.md  tsconfig.json
ml_pipeline/: MLManager.py  __init__.py  manager.py
network/: covenant_manager.py  discovery.py
shared/framework/server/: config_loader.py  decision_engine.py  governance.py  main.py  pyproject.toml  requirements.txt
(+537 files in other folders)
