# NOTE: This is an Azure Functions app, not a pip-installable Python package.
# Do not add this app as a dependency in other pyproject.toml files.

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "business-infinity"
version = "4.0.0"
description = "Lean Azure Functions client app powered by the Agent Operating System"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [ { name = "ASISaga" } ]
requires-python = ">=3.10"

dependencies = [
    "aos-client-sdk[azure]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.businessinfinity]
type = "azure-functions-app"
note = "This project is an Azure Functions application, not a pip-installable package."
