[project]
name = "framework-server"
version = "0.1.0"
dependencies = [
    "fastapi==0.112.2",
    "uvicorn==0.30.5",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "azure-identity==1.17.1",
    "azure-ai-ml==1.20.0",
    "azure-servicebus==7.12.3",
    "jsonschema==4.23.0",
    "semantic-kernel==0.9.18"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
